# Battery-Market-Strategy-Analysis-Agent

./: .gitignore  README.md  pyproject.toml  service-definition.md
docs/superpowers/plans/: 2026-03-17-battery-market-strategy-analysis-agent.md
docs/superpowers/specs/: 2026-03-17-distributed-agent-architecture-design.md  agent_cloud1반_최재민.md
src/battery_agent/: __init__.py  cli.py  config.py  logging_utils.py
src/battery_agent/agents/: __init__.py  _analysis_base.py  _curation_base.py  _prompt_builders.py  _retrieval_base.py  catl_analysis.py  catl_curation.py  catl_retrieval.py  comparison.py  evidence_quality.py  lg_analysis.py  lg_curation.py  lg_retrieval.py  references.py  report_generation.py
src/battery_agent/llm/: __init__.py  openai_structured.py
src/battery_agent/models/: __init__.py  analysis.py  evidence.py  report.py  retrieval.py  run_context.py
src/battery_agent/pipeline/: handoffs.py  orchestrator.py  retry_policy.py  workflow_state.py
src/battery_agent/prompts/: __init__.py
src/battery_agent/rag/: chroma_store.py  chunker.py  corpus_loader.py  embedder.py  pdf_corpus_loader.py  pdf_ingest.py  qwen_embedder.py  vector_index.py
src/battery_agent/search/: __init__.py  (+4 more)
tests/: test_agents.py  test_chroma_pdf.py  test_cli.py  test_config.py  test_e2e.py  test_handoffs.py  test_llm.py  test_logging_utils.py  test_markdown_renderer.py  test_models.py  test_orchestrator.py  test_paths.py  test_pdf_renderer.py  test_rag.py  test_reference_formatting.py  test_report_generation.py  test_retry_policy.py  test_search.py  test_workflow_state.py
(+5 files in other folders)
