[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-agent"
version = "0.1.0"
description = "Battery market strategy analysis agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0,<2.0",
    "tavily-python>=0.5,<1.0",
]

[project.scripts]
battery-agent = "battery_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
