[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-agent"
version = "0.1.0"
description = "Battery market strategy analysis agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5,<1.0",
    "openai>=1.0,<2.0",
    "pypdf>=5.0,<6.0",
    "tavily-python>=0.5,<1.0",
    "torch>=2.2,<3.0",
    "transformers>=4.51,<5.0",
    "markdown>=3.7,<4.0",
    "weasyprint>=61,<62",
]

[project.scripts]
battery-agent = "battery_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
